View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023274 | Community | OCCT:Foundation Classes | public | 2012-07-13 15:40 | 2012-11-16 13:17 |
Reporter | Pawel | Assigned To | Pawel | ||
Priority | normal | Severity | tweak | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2008 | ||
Product Version | 6.5.3 | ||||
Target Version | 6.5.4 | Fixed in Version | 6.5.4 | ||
Summary | 0023274: MSVC++ warnings issued during compilation for 64bits | ||||
Description | Casts between size_t and Standard_Integer produce compiler warning on 64bit platform. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
related to | 0023369 | closed | bugmaster | MSVC++ warnings issued during compilation for 64bits, Materials.cxx |
related to | 0023370 | closed | bugmaster | MSVC++ warnings issued during compilation for 64bits, WNT_FontMapEntry.cxx |
related to | 0023373 | closed | Pawel | MSVC++ warnings issued during compilation for 64bits, 'Sparse Arrays' |
|
Corresponding git branch pushed. Please review. |
|
No remarks, please test |
|
Dear BugMaster, The workbenches KAS:dev:apn-23274-occt (GIT branch CR23274) KAS:dev:apn-23274-products (GIT master) were compiled on Linux platform and on Windows 7 64-bit (PROGREX station) and tested. Regression: Not detected Improvements: Not detected Testing case: Not needed See results in /QADisk/occttests/results/KAS/dev/apn-23274-products_24072012/lin See reference results in /QADisk/occttests/results/KAS/dev/products-20120706-opt_06072012/lin See test cases in /QADisk/occttests/tests/ED |
occt: master fb8a7358 2012-07-12 15:24:03 Details Diff |
0023274: MSVC++ warnings issued during compilation for 64bits Replacing Standard_Integer with Standard_Size to avoid warnings. |
Affected Issues 0023274 |
|
mod - src/Dico/Dico_Dictionary.cdl | Diff File | ||
mod - src/Dico/Dico_Dictionary.gxx | Diff File | ||
mod - src/Dico/Dico_Iterator.gxx | Diff File | ||
mod - src/FSD/FSD_BinaryFile.cdl | Diff File | ||
mod - src/FSD/FSD_BinaryFile.cxx | Diff File | ||
mod - src/FSD/FSD_CmpFile.cdl | Diff File | ||
mod - src/FSD/FSD_CmpFile.cxx | Diff File | ||
mod - src/FSD/FSD_File.cdl | Diff File | ||
mod - src/FSD/FSD_File.cxx | Diff File | ||
mod - src/NCollection/NCollection_SparseArrayBase.hxx | Diff File | ||
mod - src/Units/Units_Sentence.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2012-07-13 15:40 | Pawel | New Issue | |
2012-07-13 15:40 | Pawel | Assigned To | => Pawel |
2012-07-13 15:57 | Pawel | Note Added: 0020960 | |
2012-07-13 15:57 | Pawel | Assigned To | Pawel => bugmaster |
2012-07-13 15:57 | Pawel | Status | new => resolved |
2012-07-13 16:14 |
|
Note Added: 0020962 | |
2012-07-13 16:14 |
|
Status | resolved => reviewed |
2012-07-25 11:17 | apn | Note Added: 0021145 | |
2012-07-25 11:17 | apn | Test case number | => Not needed |
2012-07-25 11:17 | apn | Status | reviewed => tested |
2012-07-30 16:31 | Pawel | Changeset attached | => occt master fb8a7358 |
2012-07-30 16:31 | Pawel | Assigned To | bugmaster => Pawel |
2012-07-30 16:31 | Pawel | Status | tested => verified |
2012-07-30 16:31 | Pawel | Resolution | open => fixed |
2012-08-07 13:09 | Pawel | Relationship added | related to 0023369 |
2012-08-07 16:14 | Pawel | Relationship added | related to 0023370 |
2012-08-08 11:55 | Pawel | Relationship added | related to 0023373 |
2012-11-16 13:14 | bugmaster | Fixed in Version | => 6.5.4 |
2012-11-16 13:17 | bugmaster | Status | verified => closed |