0023274: MSVC++ warnings issued during compilation for 64bits

Replacing Standard_Integer with Standard_Size to avoid warnings.